# vct-linux-hypsec-5.11

./: hw1_report.md
arch/arm64/: Kconfig  Makefile
arch/arm64/configs/: sekvm_defconfig
arch/arm64/hypsec/: Makefile  hypsec_boot.c  hypsec_helper.c  hypsec_host.c  hypsec_mmio.c  hypsec_mmu.c  hypsec_proved.c  hypsec_pvops.c  hypsec_vcpu.c  stage2_boot.c  stage2_helper.c  stage2_host.c  stage2_mmio.c  stage2_mmu.c  stage2_pvops.c  stage2_vcpu.c
arch/arm64/hypsec_proved/: AbstractMachine.c  BootAux.c  BootCore.c  BootOps.c  CMakeLists.txt  FaultHandler.c  Helper.c  Makefile  MemAux.c  MemHandler.c  MemManager.c  MemManagerAux.c  MemOps.c  MemRegion.c  MemoryOps.c  MmioCore.c  MmioCoreAux.c  MmioOps.c  MmioOps.h  MmioOpsAux.c  MmioPTAlloc.c  MmioRaw.c  NPTOps.c  NPTWalk.c  PTAlloc.c  PTWalk.c  PageIndex.c  PageManager.c  SmmuPTAlloc.c  SmmuPTOps.c  SmmuPTWalk.c  SmmuRaw.c  SmmuSPTWalk.c  TrapDispatcher.c  VCPUOps.c  VCPUOpsAux.c  VMPower.c  constants.h  el1.c  el2.c  (+5 more)
arch/arm64/hypsec_proved/hacl-20/: Hacl_AES.c  Hacl_AES.h  Hacl_Curve25519_51.c  Hacl_Host.c
arch/arm64/kernel/: asm-offsets.c  hyp-stub.S  vmlinux.lds.S
arch/arm64/kvm/: Kconfig  Makefile  arch_timer.c  arm.c  debug.c  fpsimd.c  guest.c  hyp-init.S  inject_fault.c  mmio.c  mmu.c  pvops.c  reset.c  sys_regs.c  va_layout.c
arch/arm64/mm/: cache.S
drivers/iommu/: Kconfig  arm-smmu.c  io-pgtable-arm.c  iommu.c
drivers/of/: fdt.c
drivers/vfio/: vfio.c  vfio_iommu_spapr_tce.c  vfio_iommu_type1.c
include/linux/: iommu.h  kvm_host.h  vfio.h
scripts/mod/: modpost.c
virt/kvm/: kvm_main.c
(+128 files in other folders)
